its pretty much a really ugly read-only text ediditor at this point